[package]
name = "hecs_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.5"
glam = "0.29.2"
hecs = { version = "0.10.5", features = ["std", "macros"] }
hecs_engine.git = "https://github.com/BrackenLo/hecs_engine.git"
# hecs_engine.path = "../hecs_engine"
log = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
